<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    tools:context=".ui.CartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cart"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_desc"
            android:onClick="back"
            android:src="@drawable/arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toTopOf="@id/summary"
        app:layout_constraintTop_toBottomOf="@id/actionBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            app:indicatorColor="@color/light_grey_2" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/empty_cart"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:visibility="gone"
            app:drawableTint="@color/primary"
            app:drawableTopCompat="@drawable/empty_bag" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/order_summary"
            android:textColor="@color/text"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_price_summary"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:alignItems="center"
                app:justifyContent="space_between">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/tvSubtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0.0"
                    android:textColor="@color/text" />
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                app:alignItems="center"
                app:justifyContent="space_between">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/tvDeliveryFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$5"
                    android:textColor="@color/text" />
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                app:dividerColor="#C9C3CF" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:justifyContent="space_between">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:alignItems="center" />

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0.0"
                    android:textColor="@color/text"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:alignItems="center" />
            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/primary"
            android:onClick="placeOrder"
            android:text="@string/place_order"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>