<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF6FE"
    tools:context=".ui.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="32dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:textColor="@color/text"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/app"
                    android:textColor="@color/text"
                    android:textSize="32sp" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ipEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_credentials_input"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:singleLine="true"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textCursorDrawable="@drawable/view_input_cursor"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ipPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_credentials_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:singleLine="true"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textCursorDrawable="@drawable/view_input_cursor"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:lines="2"
                android:textColor="@color/primary"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/primary"
                android:paddingVertical="14dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="24dp">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:dividerColor="#CDC7D2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/or"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:text="@string/or"
                    android:textColor="@color/text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/endDivider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:dividerColor="#CDC7D2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/or"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_desc"
                    android:onClick="googleSignInEventHandler"
                    android:src="@drawable/google" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:contentDescription="@string/image_desc"
                    android:onClick="googleSignInEventHandler"
                    android:src="@drawable/google" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_desc"
                    android:onClick="googleSignInEventHandler"
                    android:src="@drawable/google" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account"
                    android:textColor="@color/text"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/signup"
                    android:textColor="@color/primary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/viewLoading"
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</FrameLayout>